--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   padding: 0;
   border: 0;
   box-sizing: border-box;
-  font-family: 'K2D', sans-serif;
+  font-family: 'Roboto Mono', monospace;
   user-select: none;
 }
 
