--- a/style.css
+++ b/style.css
@@ -115,6 +115,25 @@ div.scene, div.cover {
   background-color: #f4eeff;
 }
 
+#pane-title {
+  position: absolute;
+  top: 40px; left: 10px; right: 10px;
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+#pane-start {
+  position: absolute;
+  top: 600px; left: 10px; right: 10px;
+}
+
+#start-button {
+  width: 200px;
+  height: 60px;
+  font-size: 32px;
+}
+
 /* ################################ */
 /* quiz scene */
 
@@ -122,11 +141,22 @@ div.scene, div.cover {
   background-color: #fff4ee;
 }
 
+#pane-hud {
+  position: absolute;
+  left: 15px; right: 15px;
+  top: 15px; height: 50px;
+}
+#hud-menu {
+  position: absolute;
+  right: 0; width: 64px;
+  top: 0; height: 45px;
+}
+
 #pane-screen {
   position: absolute;
   background: brown;
   left: 15px; right: 15px;
-  top: 15px; height: 340px;
+  top: 75px; height: 345px;
 }
 
 #screen {
@@ -136,26 +166,15 @@ div.scene, div.cover {
   top: 10px; bottom: 10px;
 }
 
-#pane-hud {
-  position: absolute;
-  left: 20px;
-  top: 370px; height: 60px;
-}
-
-#back-button {
-  position: absolute;
-  left: 0; width: 64px;
-  top: 0; height: 55px;
-}
-
 #pane-keyboard {
   position: absolute;
   left: 10px; right: 10px;
-  top: 440px; bottom: 10px;
+  top: 430px;
   text-align: center;
 }
 .key-row {
   display: flex;
+  justify-content: space-between;
 }
 .key {
   margin: 2px 2px;
