--- a/style.css
+++ b/style.css
@@ -56,16 +56,15 @@ html {
 
 body {
   height: 100%;
-  background-color: black;
+  background-color: #112;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
+  font-size: 24px;
 }
 
 #game {
   position: relative;
-  background-color: black;
   width: 500px;
   height: 700px;
   overflow: hidden;
@@ -95,7 +94,6 @@ div.scene, div.cover {
 /* preload scene */
 
 #scene-preload {
-  background: black;
   color: white;
 }
 
@@ -138,7 +136,7 @@ div.scene, div.cover {
 /* quiz scene */
 
 #scene-quiz {
-  background-color: #fff4ee;
+  background-color: #f4eeff;
 }
 
 #pane-hud {
@@ -148,8 +146,25 @@ div.scene, div.cover {
 }
 #hud-menu {
   position: absolute;
-  right: 0; width: 64px;
+  right: 0; width: 80px;
   top: 0; height: 45px;
+}
+#hud-score {
+  display: inline-block;
+  width: 40px;
+  text-align: center;
+}
+#hud-misses {
+  display: inline-block;
+  width: 40px;
+  text-align: center;
+}
+.hud-label {
+  font-size: 50%;
+}
+#hud-qtype {
+  display: inline-block;
+  margin-left: 10px;
 }
 
 #pane-screen {
