--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,8 @@ html {
 body {
   margin: 0;
   height: 100%;
-  background: #fafaff;
+  background: white;
+  color: #424242;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -39,6 +40,9 @@ body {
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  background: white;
+  border: 1px solid gray;
+  padding: 15px;
 }
 
 article {
@@ -49,9 +53,14 @@ article {
 /* question */
 
 #question-type, #answer-type {
-  font-size: 0.85rem;
+  display: inline-block;
+  background: #424242;
+  color: white;
+  font-size: 0.6rem;
   font-weight: bold;
   margin-top: 1rem;
+  padding: 3px 8px;
+  border-radius: 5px;
 }
 
 #question, #answer {
@@ -66,11 +75,11 @@ footer button {
 }
 
 .keyboard button {
-  width: 2rem;
-  height: 2rem;
+  width: 1.8rem;
+  height: 1.8rem;
 }
 
 .special-buttons button {
-  height: 2rem;
+  height: 1.8rem;
   padding: 0 15px;
 }
