--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,10 @@ html, button {
   font-family: 'Roboto Mono', monospace;
 }
 
+button {
+  cursor: pointer;
+}
+
 /* ################################ */
 /* scene */
 
@@ -50,6 +54,13 @@ article {
 }
 
 /* ################################ */
+/* header */
+
+header {
+  font-size: 0.6rem;
+}
+
+/* ################################ */
 /* question */
 
 #question-type, #answer-type {
@@ -63,11 +74,15 @@ article {
   border-radius: 5px;
 }
 
-#question, #answer {
+#question, #answer, #gold-answer {
   font-size: 1.2rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+#gold-answer {
+  color: #e55;
 }
 
 /* ################################ */
@@ -92,16 +107,17 @@ footer button {
 
 .braille-wrapper {
   display: grid;
-  grid: 1.8rem 1.8rem 1.8rem / 1.8rem 1.8rem;
+  grid: 50px 50px 50px / 50px 50px;
   align-items: center;
   justify-items: center;
-  margin: 0 .5rem;
+  margin: 0 15px;
 }
 
 .braille-wrapper > button {
-  width: 1.5rem;
-  height: 1.5rem;
-  border-radius: 0.75rem;
+  width: 45px;
+  height: 45px;
+  border-radius: 25px;
+  border: 1px solid #424242;
 }
 
 .braille-wrapper > button.off {
@@ -111,3 +127,38 @@ footer button {
 .braille-wrapper > button.on {
   background: #424242;
 }
+
+/* ################################ */
+/* semaphore */
+
+.semaphore-wrapper {
+  position: relative;
+  width: 130px;
+  height: 130px;
+  margin: 0 15px;
+}
+
+.semaphore-wrapper > button {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 25px;
+  border: 1px solid #424242;
+}
+
+.semaphore-wrapper > button.off {
+  background: transparent;
+}
+
+.semaphore-wrapper > button.on {
+  background: #42424280;
+}
+
+.semaphore-wrapper > button.flag-1 { left: 0; top: 90px; }
+.semaphore-wrapper > button.flag-2 { left: 0; top: 45px; }
+.semaphore-wrapper > button.flag-3 { left: 0; top: 0; }
+.semaphore-wrapper > button.flag-4 { left: 45px; top: 0; }
+.semaphore-wrapper > button.flag-5 { left: 90px; top: 0; }
+.semaphore-wrapper > button.flag-6 { left: 90px; top: 45px; }
+.semaphore-wrapper > button.flag-7 { left: 90px; top: 90px; }
+
