--- a/src/style.css
+++ b/src/style.css
@@ -61,7 +61,7 @@ header {
 }
 
 /* ################################ */
-/* question */
+/* question and answer */
 
 #question-type, #answer-type {
   display: inline-block;
@@ -83,6 +83,10 @@ header {
 
 #gold-answer {
   color: #e55;
+}
+
+#question .sep, #answer .sep, #gold-answer .sep {
+  margin: 0 .6rem;
 }
 
 /* ################################ */
@@ -128,6 +132,10 @@ footer button {
   background: #424242;
 }
 
+#question.braille, #gold-answer.braille {
+  font-size: 1.5rem;
+}
+
 /* ################################ */
 /* semaphore */
 
@@ -135,7 +143,7 @@ footer button {
   position: relative;
   width: 130px;
   height: 130px;
-  margin: 0 15px;
+  margin: 0 10px;
 }
 
 .semaphore-wrapper > button {
@@ -162,3 +170,6 @@ footer button {
 .semaphore-wrapper > button.flag-6 { left: 90px; top: 45px; }
 .semaphore-wrapper > button.flag-7 { left: 90px; top: 90px; }
 
+#gold-answer .semaphore-wrapper .person {
+  fill: red;
+}
