--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,6 @@ body {
   justify-content: center;
   text-align: center;
   background: white;
-  border: 1px solid gray;
   padding: 15px;
 }
 
@@ -97,8 +96,13 @@ footer button {
 }
 
 .keyboard button {
-  width: 1.8rem;
-  height: 1.8rem;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.keyboard.alphabet button {
+  width: 1.6rem;
+  height: 1.6rem;
 }
 
 .special-buttons button {
