--- a/src/style.css
+++ b/src/style.css
@@ -91,13 +91,34 @@ header {
 /* ################################ */
 /* keyboard */
 
+.keyboard, #special-buttons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 footer button {
   font-size: 1rem;
+  border: none;
+  border-radius: 3px;
+  margin: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #eee;
+}
+
+footer button:hover {
+  background: #ddd;
+}
+footer button:active {
+  background: #ccc;
 }
 
 .keyboard button {
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 2.3rem;
+  height: 2.3rem;
 }
 
 .keyboard.alphabet button {
@@ -105,7 +126,8 @@ footer button {
   height: 1.6rem;
 }
 
-.special-buttons button {
+#special-buttons button {
+  width: 150px;
   height: 1.8rem;
   padding: 0 15px;
 }
@@ -131,7 +153,6 @@ footer button {
 .braille-wrapper > button.off {
   background: white;
 }
-
 .braille-wrapper > button.on {
   background: #424242;
 }
