--- a/src/style.css
+++ b/src/style.css
@@ -109,7 +109,7 @@ footer button {
   background: #eee;
 }
 
-footer button:hover {
+footer button:hover:enabled {
   background: #ddd;
 }
 footer button:active {
@@ -117,10 +117,13 @@ footer button:active {
 }
 
 .keyboard button {
+  width: 90px;
+  height: 100px;
+}
+.keyboard.index button {
   width: 75px;
   height: 80px;
 }
-
 .keyboard.alphabet button {
   width: 50px;
   height: 65px;
@@ -140,7 +143,7 @@ footer button:active {
   grid: 50px 50px 50px / 50px 50px;
   align-items: center;
   justify-items: center;
-  margin: 0 15px;
+  margin: 10px 15px;
 }
 
 .braille-wrapper > button {
@@ -167,8 +170,12 @@ footer button:active {
 .semaphore-wrapper {
   position: relative;
   width: 130px;
-  height: 120px;
+  height: 130px;
   margin: 0 10px;
+}
+
+#answer .semaphore-wrapper {
+  margin: 10px 10px;
 }
 
 .semaphore-wrapper > button {
